<resources>
    <string name="app_name">Daily Toeic</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search word</string>
    <string name="search_description">Search Description</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_word">Từ vựng TOEIC</string>
    <string name="nav_book">Ngữ pháp TOEIC</string>
    <string name="nav_practice">Luyện thi TOEIC</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <string name="delete_button">Delete</string>
    <string name="auto_run">Run Auto</string>

    <!-- Sub titles of WordFragment -->
    <string name="vocabulary">Vocabulary</string>
    <string name="remind">Reminder</string>
    <string name="notes">Notes</string>
    <string name="practice">Practice</string>

    <string name="lock_screen">Khóa màn hình</string>
    <string name="remind_word">Nhắc từ</string>

    <string name="goodbook">Good Book</string>
    <string name="basic_theory">50 Grammar Toeic</string>
    <string name="video_maiphuong">Video Ms Mai Phuong</string>

    <string name="part_description">Chạm vào biểu tượng Play để bắt đầu nghe</string>

    <string-array name="new_word_eng">
        <item>General Business</item>
        <item>Office Issues</item>
        <item>Personal</item>
        <item>Purchasing</item>
        <item>Financing and Budgeting</item>
        <item>Management Issues</item>
        <item>Restaurants and Events</item>
        <item>Travel</item>
        <item>Entertainment</item>
        <item>Health</item>
    </string-array>

    <string-array name="new_word_viet">
        <item>Kinh doanh thông dụng</item>
        <item>Văn phòng, cơ quan</item>
        <item>Nhân viên</item>
        <item>Mua bán</item>
        <item>Tài chính và ngân sách</item>
        <item>Vấn đề quản lý</item>
        <item>Nhà hàng và các sự kiện liên quan</item>
        <item>Du lịch</item>
        <item>Giải trí</item>
        <item>Sức khỏe</item>
    </string-array>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="tab_titles">
        <item>Vocabulary</item>
        <item>Practice</item>
    </string-array>

    <!-- Tab titles -->
    <string-array name="nav_item_activity_titles">
        <item>@string/nav_word</item>
        <item>@string/nav_book</item>
        <item>@string/nav_practice</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_topic_item">TopicItemActivity</string>
    <string name="title_activity_detail_word">DetailWordActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Sub titles of PracticeFragment -->
    <string name="practice_lv_one">Level One</string>
    <string name="practice_lv_two">Level Two</string>
    <string name="practice_lv_three">Level Three</string>
    <string name="title_activity_practice_toiec">PracticeToiecActivity</string>

    <string-array name="meo_thi_part">
        <item>Mẹo thi toeic part 1</item>
        <item>Mẹo thi toeic part 2</item>
        <item>Mẹo thi toeic part 3</item>
        <item>Mẹo thi toeic part 4</item>
        <item>Mẹo thi toeic part 5 va 6</item>
        <item>Mẹo thi toeic part 7</item>
    </string-array>

    <string-array name="video_maiphuong">
        <item>Video 1</item>
        <item>Video 2</item>
        <item>Video 3</item>
        <item>Video 4</item>
    </string-array>
</resources>
